--- a/index.html
+++ b/index.html
@@ -20,6 +20,15 @@
                 <li><a href="#">Contact</a></li>
             </ul>
         </nav>
+
+        <div class="intro">
+            <p>Hi, I'm <span>Steven Johnson</span><br>a Graphic Designer.</p>
+            <div class="buttons">
+                <a href="#" class="button1">Hire Me</a>
+                <a href="#" class="button2">Clients</a>
+            </div>
+        </div>
+
     </header>
     
 </body>
