--- a/index.html
+++ b/index.html
@@ -14,18 +14,30 @@
         <nav>
             <ul>
                 <li><a href="#" class="active">Home</a></li>
-                <li><a href="#">Portfolio</a></li>
-                <li><a href="#">Resume</a></li>
-                <li><a href="#">Blog</a></li>
-                <li><a href="#">Contact</a></li>
+                <li><a href="#" target="_blank" class="tooltip">Portfolio
+                    <span class="tooltiptext">Coming soon...</span>
+                </a></li>
+                <li><a href="#" target="_blank" class="tooltip">Resume
+                    <span class="tooltiptext">Coming soon...</span>
+                </a></li>
+                <li><a href="#" target="_blank" class="tooltip">Blog
+                    <span class="tooltiptext">Coming soon...</span>
+                </a></li>
+                <li><a href="#" target="_blank" class="tooltip">Portfolio
+                    <span class="tooltiptext">Coming soon...</span>
+                </a></li>
             </ul>
         </nav>
 
         <div class="intro">
             <p>Hi, I'm <span>Steven Johnson</span><br>a Graphic Designer.</p>
             <div class="buttons">
-                <a href="#" class="button1">Hire Me</a>
-                <a href="#" class="button2">Clients</a>
+                <a href="#" class="button1 tooltip">Hire Me
+                    <span class="tooltiptext">Coming soon...</span>
+                </a>
+                <a href="#" class="button2 tooltip">Clients
+                    <span class="tooltiptext">Coming soon...</span>
+                </a>
             </div>
         </div>
 
