--- a/index.html
+++ b/index.html
@@ -14,16 +14,16 @@
         <nav>
             <ul>
                 <li><a href="#" class="active">Home</a></li>
-                <li><a href="#" target="_blank" class="tooltip">Portfolio
+                <li><a href="#" class="tooltip">Portfolio
                     <span class="tooltiptext">Coming soon...</span>
                 </a></li>
-                <li><a href="#" target="_blank" class="tooltip">Resume
+                <li><a href="#" class="tooltip">Resume
                     <span class="tooltiptext">Coming soon...</span>
                 </a></li>
-                <li><a href="#" target="_blank" class="tooltip">Blog
+                <li><a href="#" class="tooltip">Blog
                     <span class="tooltiptext">Coming soon...</span>
                 </a></li>
-                <li><a href="#" target="_blank" class="tooltip">Portfolio
+                <li><a href="#" class="tooltip">Portfolio
                     <span class="tooltiptext">Coming soon...</span>
                 </a></li>
             </ul>
