Remove showcase 'Client' link.

--- a/index.html
+++ b/index.html
@@ -32,9 +32,12 @@
                 <a href="#" class="button1 tooltip">Hire Me
                     <span class="tooltiptext">Coming soon...</span>
                 </a>
-                <a href="#" class="button2 tooltip">Clients
+
+                <!-- RETHINK THIS LINK -->
+                <!-- <a href="#" class="button2 tooltip">Clients
                     <span class="tooltiptext">Coming soon...</span>
-                </a>
+                </a> -->
+
             </div>
         </div>
 
