--- a/index.html
+++ b/index.html
@@ -10,13 +10,11 @@
 </head>
 <body>
 
-    <header>
+    <header id="header">
         <nav>
             <ul>
-                <li><a href="#" class="active">Home</a></li>
-                <li><a href="#" class="tooltip">Portfolio
-                    <span class="tooltiptext">Coming soon...</span>
-                </a></li>
+                <li><a href="/" class="active">Home</a></li>
+                <li><a href="/portfolio.html">Portfolio</a></li>
                 <li><a href="#" class="tooltip">Resume
                     <span class="tooltiptext">Coming soon...</span>
                 </a></li>
